Quartz sync: Dec 21, 2025, 9:53 PM

--- a/content/semestre/s26/6l26en/lektioner/01-07.md
+++ b/content/semestre/s26/6l26en/lektioner/01-07.md
@@ -17,4 +17,4 @@ type: lesson
 
 ## ≣ Øvelser
 - Første øvelse er at løse ligningen $x²+3x-4=0$
-- Næste øvelse handler om [skæringspunkter](../ressourcer/Skæringspunkter/skæringspunkter.pdf)
+- Næste øvelse handler om [skæringspunkter](../../../../semestre/s26/6l26en/ressourcer/Skæringspunkter/skæringspunkter.pdf)
