--- a/content/semestre/s26/6l26en/lektioner/01-07.md
+++ b/content/semestre/s26/6l26en/lektioner/01-07.md
@@ -11,7 +11,7 @@ type: lesson
 
 # 01-07
 ---
-## ⋮⋮ Program 
+## 󱗼 Program 
 - %%*8.05*%% Først regner vi opgaver
 - %%8.05%% Så gøre vi noget andet
 - %%8.05%% 
@@ -20,6 +20,4 @@ type: lesson
 - Første øvelse er at løse ligningen $x²+3x-4=0$
 - Næste øvelse handler om [skæringspunkter](../../../../semestre/s26/6l26en/ressourcer/Skæringspunkter/skæringspunkter.pdf)
 - [this](../../../../semestre/s26/ressourcer/Skæringspunkter/skæringspunkter.pdf)
-$asd$ 
-%% ads 
 
