Quartz sync: Dec 22, 2025, 2:29 AM

--- a/content/semestre/s26/6l26en/lektioner/01-07.md
+++ b/content/semestre/s26/6l26en/lektioner/01-07.md
@@ -12,10 +12,11 @@ type: lesson
 # 01-07
 ---
 ## 󱗼 Program 
-
+- %% *8.05*%% Nu skal I bare høre
 
 ## ≣ Øvelser
 - Første øvelse er at løse ligningen $x²+3x-4=0$
 - Næste øvelse handler om [skæringspunkter](../../../../semestre/s26/6l26en/ressourcer/Skæringspunkter/skæringspunkter.pdf)
 - [this](../../../../semestre/s26/ressourcer/Skæringspunkter/skæringspunkter.pdf)
+-  How is this?
 
